Fix icon alignment

--- a/app/invocation/invocation.css
+++ b/app/invocation/invocation.css
@@ -165,7 +165,9 @@
   color: #757575;
 }
 
-.invocation-action-card .icon.file-icon {
+.invocation-action-card .icon.file-icon,
+.invocation-action-card .icon.folder-icon,
+.invocation-action-card .icon.file-question-icon {
   margin-right: 4px;
   width: 18px;
   height: 18px;
@@ -1049,8 +1051,6 @@
   gap: 4px;
 
   .icon {
-    height: 18px;
-    width: 18px;
     opacity: 0.7;
   }
 
